# aqua-rs-cli

./: .env.sample  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SAMPLE_FILES_README.md  V3.2_UPGRADE_SUMMARY.md  VERSION_UPGRADE_EXPLANATION.md  chain.json  keys.sample.json  malformed_content.json  missing_content.json  sample.chain.invalid.json  sample.chain.json  sample.chain.v3.json  sample.txt  simulation.md  test_aqua_cli.sh  test_content_type.sh  test_migration.sh  test_v3_features.sh
.scannerwork/: report-task.txt
skills/: claim-attestation-building.md  forest-and-cross-tree-verification.md  template-tree-structure.md
src/: html_template.rs  main.rs  main_old.rs  models.rs  notary_main.rs  server.rs  server_sign.rs  server_witness.rs  server_witness_html.rs  sign_message_server.rs  utils.rs
src/aqua/: chain_link.rs  connect.rs  content.rs  delete_revision_from_aqua_chain.rs  forest.rs  form.rs  gen_aqua_file.rs  generate_aqua_chain_from_file.rs  identity_form.rs  identity_verify.rs  link.rs  mod.rs  object.rs  revisions.rs  server.rs  sign.rs  target.rs  twilio.rs  v3_validator.rs  verify.rs  wallet.rs  witness.rs
src/servers/: mod.rs  server_sign.rs  server_sign_html.rs  server_witness.rs  server_witness_html.rs
src/simulation/: builders.rs  keygen.rs  mod.rs  persona_scenarios.rs  sandbox.rs  scenarios.rs
src/simulation/sim2/: error_scenarios.rs  invalidate.rs  mod.rs  personas.rs  verify.rs
src/tests/: content.rs  mod.rs  sign.rs  verify.rs  witness.rs
src/tests/data/: keys.sample.json  logo.chain.error.json  logo.chain.json
src/validation/: mod.rs
static/: sign.html  witness.html
test_files/: 1.txt  2.txt
tests/: Makefile  README.md  cli_integration.rs  install-sharness.sh  test-daemon.sh  test-delete.sh  test-forest.sh  test-genesis.sh  test-identity-claims.sh  test-linking.sh  test-object-creation.sh  test-signing.sh  test-verify.sh  test-witness.sh
tests/fixtures/: keys.json  payload.json  plugin_payload.json  sample.txt  sample2.txt
