[package]
name = "aqua-cli" #"aqua-verifier-cli"
authors=["dalmasonto<https://github.com/dalmasonto>","Arthur-Kamau<https://github.com/Arthur-Kamau>" ]
version = "1.3.0"
edition = "2021"
license-file = "LICENCE"
description = "Aqua protocol command line tool that enable you to verify, sign and witness aqua chains."
readme = "README.md" 
keywords = ["aqua", "aqua-protocol"] # Keywords for crates.io search
categories = ["development-tools", "command-line-utilities"] # Categories on crates.io
repository = "https://github.com/inblockio/aqua-cli-rs"      # Source repository
homepage = "https://github.com/inblockio/aqua-cli-rs"                   # Project homepage
documentation = "https://docs.rs/aqua-cli"                   # Documentation URL
exclude = ["target", "*.lock", ".vscode", ".idea"]    # Files or directories to exclude from the package



[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
hyper = "0.14"
futures = "0.3"
sha3 = "0.10.8"
serde = "1.0.210"
serde_json_path_to_error = "0.1.4"
serde_json = "1.0"
# aqua-verifier="1.2.0"
# aqua-verifier-rs-types = "1.2.0"
aqua-verifier-rs-types = { git = "https://github.com/inblockio/aqua-verifier-rs-types", rev = "29732da894c191aefd7781cc91fcb84664144033" }
aqua-verifier = { git = "https://github.com/inblockio/aqua-verifier-rs", rev = "20b2c8d213fb39fda286a7a205357bdcb3c77358" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
base64 = "0.22.1"
actix-web = "4.4"
actix-files = "0.6"
webbrowser = "0.8"
once_cell = "1.8"
env_logger = "0.10"
actix-cors = "0.6"  
dotenv = "0.15"
rand = "0.8.5"
eth-keystore = "0.5"
secp256k1 = { version = "0.27", features = ["rand"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
ethers = "2.0.14"
eyre = "0.6"
bip32 = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
tempfile = "3.3"


# Specify the binary target
[[bin]]
name = "aqua-cli" # This will be the command-line executable name
path = "src/main.rs"