[package]
name = "aqua-cli" #"aqua-verifier-cli"
authors=["dalmasonto<https://github.com/dalmasonto>","Arthur-Kamau<https://github.com/Arthur-Kamau>" ]
version = "1.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"
description = "Aqua protocol command line tool that enable you to verify, sign and witness aqua chains."
readme = "README.md"
keywords = ["aqua", "aqua-protocol"] # Keywords for crates.io search
categories = ["development-tools", "command-line-utilities"] # Categories on crates.io
repository = "https://github.com/inblockio/aqua-cli-rs"      # Source repository
homepage = "https://github.com/inblockio/aqua-cli-rs"                   # Project homepage
documentation = "https://docs.rs/aqua-cli"                   # Documentation URL
exclude = ["target", "*.lock", ".vscode", ".idea"]    # Files or directories to exclude from the package



[features]
simulation = ["dep:ed25519-dalek", "dep:p256", "dep:rand"]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.210"
serde_json_path_to_error = "0.1.4"
serde_json = "1.0"
aqua-rs-sdk = { path = "../aqua-rs-sdk", features = ["github", "daemon"] }
getrandom = "0.3"
sha2 = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
once_cell = "1.8"
env_logger = "0.10"
dotenv = "0.15"
hex = "0.4"
tempfile = "3.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"], optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
rand = { version = "0.8", optional = true }


# Specify the binary targets
[[bin]]
name = "aqua-cli"
path = "src/main.rs"

[[bin]]
name = "aqua-notary"
path = "src/notary_main.rs"
